# python-project-49

./: .gitignore  README.md  pyproject.toml
brain_games/: cli.py  game_logic.py
brain_games/games/: calc.py  even.py  game_logic.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brian_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_games1.py  brain_gcd.py  brain_prime.py  brain_progression.py
